--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -1,12 +1,29 @@
 html {
   text-align: center;
+  font-family: Verdana;
 }
 
-h1.main {
-  font-family: Verdana;
+body {
+  background-color: Black;
+}
+
+h1 {
   font-weight: normal;
-  font-size: 50px;
   color: White;
+}
+h1.main {
+  font-size: 50px;
+}
+
+h1.description {
+  font-weight: 300;
+  font-size: 42px;
+}
+
+h2 {
+  font-weight: normal;
+  font-size: 21px;
+  color: Gray;
 }
 
 p.link {
